feat: generated models for contacts, challenges, config, aid.members, keyeventrecord (#95)
* feat: apply generated models for schemas

* feat: apply generated models for contacts, challenges, config, members

* feat: apply KeyEventRecord model (todo on kt deserialization still)

* chore: get correct membersends format from keria