@@ -30,9 +30,11 @@ import java.util.*;
 import java.util.concurrent.ExecutionException;
 import java.util.stream.Collectors;
 
+import org.cardanofoundation.signify.generated.keria.model.AidRecord;
 import org.cardanofoundation.signify.generated.keria.model.Credential;
 import org.cardanofoundation.signify.generated.keria.model.Exn;
 import org.cardanofoundation.signify.generated.keria.model.ExnMultisig;
+import org.cardanofoundation.signify.generated.keria.model.GroupMember;
 import org.cardanofoundation.signify.generated.keria.model.HabState;
 import org.cardanofoundation.signify.generated.keria.model.KeyStateRecord;
 
@@ -201,15 +203,10 @@ public class MultisigUtils {
         }
 
         List<Object> opList = new ArrayList<>();
-        Map<String, Object> members = (Map<String, Object>) client.identifiers().members(groupName);
-        List<Object> signings = (List<Object>) members.get("signing");
+        GroupMember members = client.identifiers().members(groupName);
 
-        for (Object signing : signings) {
-            Map<String, Object> signingMap = (Map<String, Object>) signing;
-            Map<String, Object> ends = (Map<String, Object>) signingMap.get("ends");
-            LinkedHashMap<String, Object> agent = (LinkedHashMap<String, Object>) ends.get("agent");
-
-            String eid = agent.firstEntry().getKey();
+        for (AidRecord signing : members.getSigning()) {
+            String eid = signing.getEnds().getAgent().keySet().iterator().next();
             EventResult endRoleResult = client
                     .identifiers()
                     .addEndRole(multisigAID.getName(), "agent", eid, timestamp);
@@ -260,14 +257,9 @@ public class MultisigUtils {
         }
 
         List<Object> opList = new ArrayList<>();
-        Map<String, Object> members = (Map<String, Object>) client.identifiers().members(groupName);
-        List<Object> signings = (List<Object>) members.get("signing");
+        GroupMember members = client.identifiers().members(groupName);
 
-        Map<String, Object> signingMap = TestUtils.castObjectToListMap(signings).get(0);
-        Map<String, Object> ends = (Map<String, Object>) signingMap.get("ends");
-        LinkedHashMap<String, Object> agent = (LinkedHashMap<String, Object>) ends.get("agent");
-
-        String eid = agent.firstEntry().getKey();
+        String eid = members.getSigning().getFirst().getEnds().getAgent().keySet().iterator().next();
         EventResult endRoleResult = client
                 .identifiers()
                 .addEndRole(multisigAID.getName(), "agent", eid, timestamp);
